fix color block sizing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ nav a:hover {
 		margin: auto;
 	}
 	#blocks img {
-		width: 32.25%;
+		width: 32%;
 	}
 }
 
